--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
     "url": "https://github.com/kiily/react-ts"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "npm-run-all build:tailwind --parallel watch:tailwind start:react",
+    "start:react": "react-scripts start",
+    "prebuild": "run-s build:tailwind",
     "build": "react-scripts build",
+    "build:tailwind": "tailwindcss build src/tailwind.css -o src/tailwind.output.css",
+    "watch:tailwind": "chokidar 'src/**/*.css' 'src/**/*.scss' --ignore src/tailwind.output.css -c 'npm run build:tailwind'",
     "test": "react-scripts test",
     "test:ci": "cross-env CI=true react-scripts test",
     "eject": "react-scripts eject",
@@ -20,6 +24,7 @@
     "node-sass": "4.14.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "tailwindcss": "^1.7.5",
     "typescript": "3.9.7"
   },
   "devDependencies": {
@@ -33,6 +38,7 @@
     "@types/node": "14.6.1",
     "@types/react": "16.9.48",
     "@types/react-dom": "16.9.8",
+    "chokidar-cli": "^2.1.0",
     "commitizen": "4.2.1",
     "cross-env": "7.0.2",
     "cz-conventional-changelog": "3.3.0",
@@ -43,6 +49,7 @@
     "eslint-plugin-simple-import-sort": "5.0.3",
     "husky": "4.2.5",
     "lint-staged": "10.2.13",
+    "npm-run-all": "^4.1.5",
     "prettier": "2.1.1",
     "react-scripts": "3.4.3",
     "semantic-release": "17.1.1"
